--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <div class="box-des">Giới thiệu</div>
                         <div class="box-title">
                             <h2>
-                                Chuỗi trung tâm tiêm chủng VACCO
+                                Chuỗi trung tâm <br> tiêm chủng VACCO
                             </h2>
                         </div>
                     </div>
@@ -581,7 +581,7 @@
                     <div class="footer-content">
                         <div class="footer-embed">
                             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fvacco.vn%2F&tabs&width=340&height=196&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=2711438699140291"
-                                    width="340" height="196" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+                                    width="100%" height="196" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
                                     allow="encrypted-media"></iframe>
                         </div>
                     </div>
