Fix css button next, prev slider Fix copyright footer

--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="menu-top-content">
                     <a href="login.html">
-                        Đăng nhập tài khoản
+                        Đăng nhập <br> tài khoản
                     </a>
                 </div>
             </div>
@@ -233,7 +233,7 @@
         </div>
     </div>
     <div class="footer-coppyright">
-        <p>Bản quyền © 2020 thuộc về CÔNG TY CỔ PHẦN VACCO</p>
+        <p>© 2020 thuộc về CÔNG TY CỔ PHẦN VẮC XIN VACCO</p>
     </div>
 </footer>
 <!--[---------------------JS start here-----------------------]-->
