--- a/user-information.html
+++ b/user-information.html
@@ -337,7 +337,7 @@
         </div>
     </div>
     <div class="footer-coppyright">
-        <p>Bản quyền © 2020 thuộc về CÔNG TY CỔ PHẦN VACCO</p>
+        <p>© 2020 thuộc về CÔNG TY CỔ PHẦN VẮC XIN VACCO</p>
     </div>
 </footer>
 <!--[---------------------JS start here-----------------------]-->
