--- a/about-adult.html
+++ b/about-adult.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="menu-top-content">
                         <a href="login.html">
-                            Đăng nhập tài khoản
+                            Đăng nhập <br> tài khoản
                         </a>
                     </div>
                 </div>
@@ -401,7 +401,7 @@
             </div>
         </div>
         <div class="footer-coppyright">
-            <p>Bản quyền © 2020 thuộc về CÔNG TY CỔ PHẦN VACCO</p>
+            <p>© 2020 thuộc về CÔNG TY CỔ PHẦN VẮC XIN VACCO</p>
         </div>
     </footer>
     <!--[---------------------JS start here-----------------------]-->
