Fix css responsive Fix close menu

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
                 <img src="assets/img/logo.png" alt="logo">
             </a>
 
+            <div class="menu-top-item">
+                <div class="menu-top-icon">
+                    <img src="assets/img/ic_phone.png" alt="phone">
+                </div>
+                <div class="menu-top-content">
+                    <a href="tel:081-332-5989" class="font-weight-bold color-red">081-332-5989</a>
+                </div>
+            </div>
+
             <div class="btn btn-light menu-toggle">
                 <i class="fas fa-bars icon-toggle"></i>
             </div>
@@ -53,7 +62,7 @@
                     <a href="tel:081-332-5989" class="font-weight-bold color-red">081-332-5989</a>
                 </div>
             </div>
-            <div class="menu-top-item">
+            <div class="menu-top-item order-2 order-lg-1">
                 <div class="menu-top-icon">
                     <img src="assets/img/ic_live.png" alt="live">
                 </div>
@@ -61,7 +70,7 @@
                     <a href="#">Giao lưu trực tuyến</a>
                 </div>
             </div>
-            <div class="menu-top-item">
+            <div class="menu-top-item order-3 order-lg-2">
                 <div class="menu-top-icon">
                     <img src="assets/img/ic_pin.png" alt="pin">
                 </div>
@@ -69,7 +78,7 @@
                     <a href="#">Tìm trung tâm tiêm chủng</a>
                 </div>
             </div>
-            <div class="menu-top-item">
+            <div class="menu-top-item order-4 order-lg-3">
                 <div class="menu-top-icon">
                     <img src="assets/img/ic_user.png" alt="user">
                 </div>
@@ -79,7 +88,7 @@
                     </a>
                 </div>
             </div>
-            <div class="menu-top-item w-100 pr-lg-0 ml-lg-auto">
+            <div class="menu-top-item order-1 order-lg-4">
                 <div class="menu-top-content">
                     <a href="subcribe-info.html" class="button button--subcribe">
                         Đăng ký tiêm
