--- a/user-information.html
+++ b/user-information.html
@@ -38,6 +38,15 @@
                 <img src="assets/img/logo.png" alt="logo">
             </a>
 
+            <div class="menu-top-item">
+                <div class="menu-top-icon">
+                    <img src="assets/img/ic_phone.png" alt="phone">
+                </div>
+                <div class="menu-top-content">
+                    <a href="tel:081-332-5989" class="font-weight-bold color-red">081-332-5989</a>
+                </div>
+            </div>
+
             <div class="btn btn-light menu-toggle">
                 <i class="fas fa-bars icon-toggle"></i>
             </div>
@@ -52,7 +61,7 @@
                     <a href="tel:081-332-5989" class="font-weight-bold color-red">081-332-5989</a>
                 </div>
             </div>
-            <div class="menu-top-item">
+            <div class="menu-top-item order-2 order-lg-1">
                 <div class="menu-top-icon">
                     <img src="assets/img/ic_live.png" alt="live">
                 </div>
@@ -60,7 +69,7 @@
                     <a href="#">Giao lưu trực tuyến</a>
                 </div>
             </div>
-            <div class="menu-top-item">
+            <div class="menu-top-item order-3 order-lg-2">
                 <div class="menu-top-icon">
                     <img src="assets/img/ic_pin.png" alt="pin">
                 </div>
@@ -68,7 +77,7 @@
                     <a href="#">Tìm trung tâm tiêm chủng</a>
                 </div>
             </div>
-            <div class="menu-top-item menu-top-item--submenu">
+            <div class="menu-top-item order-4 order-lg-3 menu-top-item--submenu">
                 <div class="menu-top-icon">
                     <div class="menu-top-ava">
                         <img src="assets/img/ava.png" alt="user">
@@ -86,7 +95,7 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-top-item w-100 pr-lg-0 ml-lg-auto">
+            <div class="menu-top-item order-1 order-lg-4">
                 <div class="menu-top-content">
                     <a href="subcribe-info.html" class="button button--subcribe">
                         Đăng ký tiêm
