fix css menu mobile

--- a/user-information.html
+++ b/user-information.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="menu-top-content">
                     <div class="menu-top-name">
-                        Thanh Tâm <i class="fas fa-caret-down"></i>
+                        <span class="d-none d-md-block">Thanh Tâm</span> <i class="fas fa-caret-down"></i>
                         <ul class="menu-top-submenu">
                             <li class="submenu-item"><a href="schedule.html" class="submenu-link">Đặt lịch tiêm</a></li>
                             <li class="submenu-item"><a href="injection-history.html" class="submenu-link">Lịch sử tiêm</a></li>
